k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: servicedesk-pricing
  labels:
    name: servicedesk-pricing
    environment: production
